src/components/faq/Faq.module.scss
@import "../styles/variables.scss";

.container {
  color: whitesmoke;
  padding-bottom: $p3/2;
  padding-top: $p3/1.2;
  position: relative;

  #large_blue_ellipse {
    position: absolute;
    z-index: 1;
  }
  #giant_faint_pink_ellipse {
    position: absolute;
    right: 0px;
    top: 600px;
    z-index: 1;
  }
  #giant_red_streak {
    position: absolute;
    right: 0px;
    top: 900px;
    z-index: 1;
  }
}

.clickable {
  cursor: pointer;
}

.flip {
  transform: rotate(180deg);
}

.link {
  color: plum;
  font-weight: bold;
}

.faq_box {
  padding-bottom: $p2;
  #game_console {
    z-index: 3;
  }

  .title {
    font-size: $header;
    font-family: "Retronoid";
    z-index: 3;
  }
}

.qa_shape {
  z-index: 20;
  font-family: "Titillium Web";
  .question {
    font-size: $p;
  }

  .answer {
    font-size: $p/1.35;
    color: whitesmoke;
  }

  .both {
    width: $faq;
    border-radius: 10px;
    text-align: left;
    padding: $p1/3 $p1 $p1/3 $p1;
    opacity: 90%;
  }
}

@media (max-width: 480px) {
  .faq_box {
    .title {
      font-size: $headerMobile;
    }
  }
  .qa_shape {
    .question {
      font-size: $p/1.1;
    }
    .answer {
      font-size: $p/1.4;
    }
    .both {
      padding-left: 2vw;
    }
  }
}

